--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -19,6 +19,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " - SVM 알고리즘은 데이터셋의 각 피처(열) 벡터들이 고유의 축을 갖는 벡터 공간을 이룬다고 가정\n",
+    " - 모든 데이터를 벡터 공간 내의 좌표에 점으로 표시하고, 각 데이터가 속하는 목표 클래스(label)별로 나뉜다고 생각 하면됨\n",
+    " - hyper plane(초평면) : N차원을 가지는 데이터 차원에서 N-1차원을 가지는 subspace 표현이 됨\n",
+    " - support vector : 각 클래스별로 최외각에 있는 벡터\n",
+    " - margin : 각 레이블들 사이의 여백\n",
+    " - c : hard(적은 이상치 허용), soft(많은 이상치 허용)\n",
+    " - gamma : 결정경계의 곡률을 결정하는데 사용\n",
+    " - kernel : \"linear\", \"poly\", \"rbf\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. 목적 - SVM을 가지고 iris 데이터를 분류"
    ]
   },
